# SLinecraft

./: .gitignore  CMakeLists.txt  README.md  compile.sh  hislendstone
src/: includes.h  main.cpp
src/engine/: Block.cpp  Block.h  GameObject.cpp  GameObject.h  Object.cpp  Object.h  World.cpp  World.h  types.h
src/engine/render/: Camera.cpp  Camera.h  Object.cpp  Object.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  texture.cpp  texture.h  window.cpp  window.h
src/engine/render/glad/include/glad/: glad.h
src/engine/render/glad/src/: glad.c
src/engine/render/shaders/: shaders.cpp  shaders.h
src/platform/: Linux.h  Win64.h  platform.h
src/utils/: utils.cpp  utils.h
